fixed overflow issue when modal is open

--- a/src/components/comparePlayers/Player.module.css
+++ b/src/components/comparePlayers/Player.module.css
@@ -1,5 +1,5 @@
 .stat {
-  padding: 0.2rem 1rem;
+  padding: 0.2rem 0.5rem;
   color: orange;
   display: inline-block;
   text-align: center;
