--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -2,16 +2,17 @@ nav {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1000;
 }
 .desktopNav {
+  position: relative;
   display: flex;
   justify-content: space-around;
   padding: 1rem 1rem;
   font-size: 1.3rem;
   color: rgb(255, 255, 255);
   background-color: rgb(31, 30, 30);
-
+  z-index: 1000;
   box-shadow: 0 0 10px white;
 }
 
